# api/v1/swagger.yaml
@@ -186,6 +186,109 @@ paths:
         id: u96bywly9mqg4
       security:
         - Bearer: []
+  /twilio/phoneNumbers:
+    get:
+      summary: Get Available Phone Numbers list
+      responses: {}
+      operationId: get-twilio-phoneNumbers
+      x-stoplight:
+        id: kbqsty6fg7exx
+      security:
+        - Bearer: []
+      parameters:
+        - schema:
+            type: string
+          in: query
+          name: country
+      tags:
+        - Twilio
+  '/twilio/{propertyId}/buyPhoneNumber':
+    parameters:
+      - schema:
+          type: string
+        name: propertyId
+        in: path
+        required: true
+    post:
+      summary: Buy Phonenumber for Property
+      tags:
+        - Twilio
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                required:
+                  - result
+                properties:
+                  result:
+                    type: object
+                    x-stoplight:
+                      id: oubvrjm75peom
+                    required:
+                      - message
+                    properties:
+                      message:
+                        type: string
+                        x-stoplight:
+                          id: m328ktmkl6mxn
+      operationId: post-twilio-propertyId-buyPhoneNumber
+      x-stoplight:
+        id: r0xyiornttr0a
+      description: ''
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - phoneNumber
+              properties:
+                phoneNumber:
+                  type: string
+                  x-stoplight:
+                    id: c4sii266sgyvi
+      security:
+        - Bearer: []
+  '/twilio/{propertyId}/createSubaccount':
+    parameters:
+      - schema:
+          type: string
+        name: propertyId
+        in: path
+        required: true
+    post:
+      summary: Create Subaccount for the property
+      tags:
+        - Twilio
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                required:
+                  - result
+                properties:
+                  result:
+                    type: object
+                    x-stoplight:
+                      id: zepgbb5r0mq6q
+                    required:
+                      - message
+                    properties:
+                      message:
+                        type: string
+                        x-stoplight:
+                          id: 3sm8azvocsfrg
+      operationId: post-twilio-propertyId-createSubaccount
+      x-stoplight:
+        id: 49qo0ggfuutup
+      security:
+        - Bearer: []
 components:
   schemas:
     User:
@@ -504,6 +607,10 @@ components:
               - city
               - address
               - countryCode
+              - standardCheckinTime
+              - standardCheckoutTime
+              - timezone
+              - defaultNewDayTime
             properties:
               name:
                 type: string
@@ -535,7 +642,28 @@ components:
                 type: string
               countryCode:
                 type: string
+              standardCheckinTime:
+                type: string
+                x-stoplight:
+                  id: mwfb9m023itk0
+              standardCheckoutTime:
+                type: string
+                x-stoplight:
+                  id: 1t24qd9okarw1
+              timezone:
+                type: string
+                x-stoplight:
+                  id: h0nl4ei7d0q1o
+              defaultNewDayTime:
+                type: string
+                x-stoplight:
+                  id: 3nmhpf9z8g4q7
       description: Create property Request
+    PhoneNumber:
+      content:
+        application/json:
+          schema:
+            type: object
   responses:
     Login:
       description: Example response
@@ -612,6 +740,9 @@ components:
       content:
         application/json:
           schema:
-            type: array
-            items:
-              $ref: '#/components/schemas/Property'
+            type: object
+            properties:
+              '':
+                type: string
+                x-stoplight:
+                  id: l1ju0k5o5khvd
